Try client:only="solid" instead of client:visible

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Counter from '../components/Counter.jsx';
 	</head>
 	<body>
 		<main>
-			<Counter client:visible>
+			<Counter client:only="solid">
 				<h1>Hello, Solid!</h1>
 			</Counter>
 		</main>
